playbooks/argocd/applications/media/threadfin/ingress.yaml
# playbooks/yaml/argocd-apps/threadfin/ingress.yaml
# Ingress for Threadfin
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: threadfin
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - threadfin.soyspray.vip
      secretName: prod-cert-tls
  rules:
    - host: threadfin.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: threadfin
                port:
                  number: 34400
